style.css
* {
  background-color: beige;
  background-clip: border-box;
}

.header {
  background-color: yellow;
}

img {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.links {
    height: auto;
    width: auto;
    padding: 10px 10px 10px 10px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
    box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
    background-color: grey;
  }

.links a {
  background-color: gray;
  color: white;
  text-decoration: none;
}

header h1 {
    color: whitesmoke;
    background-color: grey;
    margin: 0;
    font-size: 4vw;
    line-height: 1;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    justify-content: flex-start;
}

.greeting {
    display: flex;
   justify-content: flex-start;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color:black;
  }

nav {
        display: flex;
        justify-content: flex-end;
        color: black;
        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
        padding: 5px 5px 5px 5px;
      }



p {
    display: flex;
    justify-content: flex-start;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

#about {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}

#work {

}

.page-section {
  margin: 25px 0;
  padding: 10px 0;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: space-between;
}

.page-section h2 {
  flex: 0 0 20%;
}

.page-section div {
  flex: 0 0 75%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.page-section a {
  color: blue;
  text-decoration: none;
}

.project {
  border: 5px solid gray;
  min-height: 225px;
  max-height: 225px;
  text-decoration: none;
  flex-basis: calc(49% - 1em);
  display: flex;
  align-items: flex-end;
  margin-bottom: 10px;
  margin-left: 5px;
  margin-right: 5px;
}

.project:first-child, .project:nth-child(2) {
  min-height: 400px;
  flex-basis: 100%;
}

.project h3 {
  background-color: grey;
  margin: 0;
  padding: 0;
  /* display: inline; */
}

.pwdGen {
  background-image: url("./images/Password\ Generator.jpeg");
  background-size: cover;
}

.mainP {
  background-image: url("./images/myDaily.jpg");
  background-size: cover;
}

.mainB {
  background-image: url("./images/board-game-sommelier.jpg");
  background-size: cover;
}

.workD {
  background-image: url("./images/Work\ Day\ Scheduler.jpeg");
  background-size: cover;
}
.quiz {
  background-image: url("./images/Quiz\ Generator.jpeg");
  background-size: cover;
}
.rain{
  background-image: url("./images/Weather\ Dashboard.jpeg");
  background-size: cover;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.flex-item {
  align-items: flex-center;
  padding: 0 0 20px 0;
  margin: 0.5em;
  text-decoration: none;
  background-blend-mode: soft-light;
  background-size: 150%;
  transition: all 0.5s;
  font-size: 16px;
}

.flex-item:first-assignment {
  max-height: 10px;
  flex-basis: 100%;
  display: flex;
  align-items: center;
}

.flex-item:webpage-update {
  display: flex;
  align-items: center;
  position: absolute;
}

.flex.item coming-soon {

}

@media screen and (min-width: 640px) {
  header {
    padding: 0 0 10px 0;
    justify-content: center;
    text-align: center;
  }
}

header h1 {
  width: 100%;
  padding: 5px;
  margin-bottom: 10px;
  font-size: 10vw;
}

header nav {
  justify-content: center;
}

@media screen and (min-width: 812px) {
  header {
    padding: 0 0 10px 0;
    justify-content: center;
    text-align: center;
  }
}

header h1 {
  width: 100%;
  padding: 5px;
  margin-bottom: 10px;
  font-size: 10vw;
}

header nav {
  justify-content: center;
}

